--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,35 @@ jobs:
     runs-on: macOS-latest
 
     steps:
-      - uses: actions/checkout@master
-      - uses: codecov/codecov-action@v2
-      - uses: actions/setup-java@v1
+      - name: Checkout
+        uses: actions/checkout@master
+      
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
+        
+      - name: Setup codecov
+        uses: codecov/codecov-action@v2
+      
+      - name: Setup java
+        uses: actions/setup-java@v1
         with:
           java-version: 11
+      
       - name: Build debug
-        run: bash ./gradlew clean build createDebugCoverageReport
+        run: bash ./gradlew build createDebugCoverageReport
+      
+      - name: Instrumentation Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          target: default
+          arch: x86
+          profile: Nexus 6
+          script: ./gradlew connectedCheck --stacktrace
+
+      - name: Generate code coverage reports
+        run: bash ./gradlew createDebugCoverageReport
+
       - name: Upload coverage to Codecov
         run: |
           curl -Os https://uploader.codecov.io/latest/macos/codecov
