--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,25 +16,22 @@ jobs:
       - name: Setup codecov
         uses: codecov/codecov-action@v2
       
-      - name: Setup java
+      - name: Setup java 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
       
-      - name: Build debug
-        run: bash ./gradlew buildDebug
+      - name: Build project
+        run: bash ./gradlew clean build
       
-      - name: Instrumentation Tests
+      - name: Generate code coverage reports
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
           target: default
           arch: x86
           profile: Nexus 6
-          script: ./gradlew connectedCheck --stacktrace
-
-      - name: Generate code coverage reports
-        run: bash ./gradlew createDebugCoverageReport
+          script: ./gradlew createDebugCoverageReport --stacktrace
 
       - name: Upload coverage to Codecov
         run: |
