--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           target: default
           arch: x86
           profile: Nexus 6
-          script: ./gradlew createDebugCoverageReport --stacktrace
+          script: ./gradlew connectedCheck --stacktrace
 
       - name: Upload coverage to Codecov
         run: |
