--- a/jacoco.gradle
+++ b/jacoco.gradle
@@ -1,3 +1,7 @@
+jacoco {
+    toolVersion = "0.8.8"
+}
+
 project.afterEvaluate { project ->
     setupAndroidReporting()
 }
@@ -90,7 +94,7 @@ def setupAndroidReporting() {
                     xml.enabled true // change if needed
                     html {
                         enabled true
-                        destination file("${buildDir}/coverage-report")
+//                        destination file("../build/coverage-report")
                     }
                 }
             }
