--- a/kotLibrary/build.gradle
+++ b/kotLibrary/build.gradle
@@ -20,6 +20,5 @@ java {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    testImplementation 'junit:junit:4.13.2'
+    implementation 'junit:junit:4.13.2'
 }
