--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Android
 
-on: [push, pull_request]
+on: [ push, pull_request ]
+
+env:
+  GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx4g -Dorg.gradle.daemon=false -Dkotlin.incremental=false"
 
 jobs:
   test:
@@ -8,29 +11,28 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@master
-      
+        uses: actions/checkout@v3
+
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
-        
+
       - name: Setup codecov
         uses: codecov/codecov-action@v2
-      
+
       - name: Setup java 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 11
-      
+
       - name: Build project
         run: bash ./gradlew build --stacktrace
-      
+
       - name: Generate code coverage reports
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 23
-          target: default
-          arch: x86
-          profile: Nexus 6
+          api-level: 24
+          target: google_apis
+          channel: stable
           script: ./gradlew testDebugUnitTest connectedDebugAndroidTest testDebugUnitTestCoverage jacocoTestReport createDebugCoverageReport --stacktrace
 
       - name: Upload coverage to Codecov
@@ -38,3 +40,9 @@ jobs:
           curl -Os https://uploader.codecov.io/latest/macos/codecov
           chmod +x codecov
           ./codecov
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-outputs
+          path: app/build/outputs
